{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 215,
  "lineage": "5ce69f8c-dde8-75ee-8c57-2d67e0daba5f",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-099400d52583dd8c4",
            "arn": "arn:aws:ec2:eu-west-2:905674322808:instance/i-0139c8a5f1421b9bd",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0139c8a5f1421b9bd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "wp-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-01948f26d89a83b78"
              }
            ],
            "primary_network_interface_id": "eni-01948f26d89a83b78",
            "private_dns": "ip-10-0-1-159.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.159",
            "public_dns": "ec2-18-133-161-72.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.133.161.72",
            "region": "eu-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07b710141c2cca7d1",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-092c3e373b8cabd52",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0440475139816bfb2"
            ]
          },
          "dependencies": [
            "aws_key_pair.wp_key",
            "module.vpc.aws_security_group.aws_sg",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:905674322808:internet-gateway/igw-0f5bab0e3dfabfb28",
            "id": "igw-0f5bab0e3dfabfb28",
            "owner_id": "905674322808",
            "region": "eu-west-2",
            "tags": {
              "Name": "igw-main"
            },
            "tags_all": {
              "Name": "igw-main"
            },
            "vpc_id": "vpc-048555baf15d1e19b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main_rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:905674322808:route-table/rtb-0c1c82fe45a54f8e3",
            "id": "rtb-0c1c82fe45a54f8e3",
            "owner_id": "905674322808",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f5bab0e3dfabfb28",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main_rt_public"
            },
            "tags_all": {
              "Name": "main_rt_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-048555baf15d1e19b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a240e679681e0667",
            "region": "eu-west-2",
            "route_table_id": "rtb-0c1c82fe45a54f8e3",
            "subnet_id": "subnet-092c3e373b8cabd52"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.main_rt_public",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:905674322808:security-group/sg-0440475139816bfb2",
            "description": "Security group for WordPress EC2",
            "egress": [],
            "id": "sg-0440475139816bfb2",
            "ingress": [],
            "name": "aws_sg",
            "name_prefix": "",
            "owner_id": "905674322808",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws_sg"
            },
            "tags_all": {
              "Name": "aws_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-048555baf15d1e19b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:905674322808:subnet/subnet-092c3e373b8cabd52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092c3e373b8cabd52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905674322808",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "public-subnet-main"
            },
            "tags_all": {
              "Name": "public-subnet-main"
            },
            "vpc_id": "vpc-048555baf15d1e19b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wp_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:905674322808:vpc/vpc-048555baf15d1e19b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05db5165cfa90e08f",
            "default_route_table_id": "rtb-0cea174040118937a",
            "default_security_group_id": "sg-0d53b210832292ff5",
            "dhcp_options_id": "dopt-303b1758",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-048555baf15d1e19b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cea174040118937a",
            "owner_id": "905674322808",
            "region": "eu-west-2",
            "tags": {
              "Name": "wp-vpc"
            },
            "tags_all": {
              "Name": "wp-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:905674322808:security-group-rule/sgr-09eaa24e542104c10",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-09eaa24e542104c10",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-2",
            "security_group_id": "sg-0440475139816bfb2",
            "security_group_rule_id": "sgr-09eaa24e542104c10",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.aws_sg",
            "module.vpc.aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:905674322808:security-group-rule/sgr-0ffb159d9fc0ca87f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0ffb159d9fc0ca87f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-2",
            "security_group_id": "sg-0440475139816bfb2",
            "security_group_rule_id": "sgr-0ffb159d9fc0ca87f",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.aws_sg",
            "module.vpc.aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:905674322808:security-group-rule/sgr-0b6478a5f81273e22",
            "cidr_ipv4": "86.181.226.251/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0b6478a5f81273e22",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-2",
            "security_group_id": "sg-0440475139816bfb2",
            "security_group_rule_id": "sgr-0b6478a5f81273e22",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.aws_sg",
            "module.vpc.aws_vpc.wp_vpc"
          ]
        }
      ]
    }
  ]
}